# dyndis

./: CHANGELOG.md  IMPLEMENTATION.md  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml  test.yml
_dyndis/: multidispatch.py  topological_set.py  trie.py  util.py
_dyndis/type_keys/: delegates.py  type_key.py  unbound_friend.py
docs/source/: conf.py  index.rst
docs/source/API/: Candidate.rst  Implementor.rst  MultiDispatch.rst  RawReturnValue.rst
dyndis/: __data__.py  __init__.py  ambiguity_set.py  annotation_filter.py  candidate.py  descriptors.py  exceptions.py  implementor.py  multi_dispatch.py  multidispatch.py  ranked_children.py  topological_ordering.py  topological_set.py  trie.py  type_hints.py  util.py
dyndis/type_keys/: delegates.py  type_key.py  unbound_friend.py
dyndis_data/: __init__.py
scripts/: fill_template.py  install.sh  lint.sh  unittest.sh
tests/: exmple_test.py  md_test.py  peano.py  peano_test.py  sandbox.py  trie_tests.py
tests/unittest/: peano.py  peano_test.py  test_examples.py  test_implementors.py  test_match.py  test_method.py  test_multidispatch.py  test_op.py  test_peano.py  test_topology.py  test_trie.py  test_typevars.py  test_weaktupledict.py
